<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:stv="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.guang.jiyu.jiyu.widget.TitleBar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></com.guang.jiyu.jiyu.widget.TitleBar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60dp"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_input_new_pwd_txt"
            android:textSize="@dimen/text_16sp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/size_20dp"/>

        <EditText
            android:id="@+id/et_new_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/size_120dp"
            android:background="@null"
            android:hint="@string/string_input_new_pwd"
            android:textSize="@dimen/text_16sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60dp"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_confirm_new_pwd_txt"
            android:textSize="@dimen/text_16sp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/size_20dp"/>

        <EditText
            android:id="@+id/et_confirm_new_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/size_120dp"
            android:background="@null"
            android:hint="@string/string_confirm_new_pwd"
            android:textSize="@dimen/text_16sp"/>

    </RelativeLayout>
</LinearLayout>