<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:stv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.guang.jiyu.jiyu.widget.TitleBar
            android:id="@+id/titlebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <View
            style="@style/hor_view_1dp"/>
        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60dp"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_name"
            android:textSize="@dimen/text_16sp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/size_20dp"/>

        <EditText
            android:id="@+id/et_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/size_120dp"
            android:background="@null"
            android:hint="@string/string_input_ture_name"
            android:textSize="@dimen/text_16sp"/>

    </RelativeLayout>
        <View
            style="@style/hor_view_1dp"/>
        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60dp"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_ID_card"
            android:textSize="@dimen/text_16sp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/size_20dp"/>

        <EditText
            android:id="@+id/et_idcard_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/size_120dp"
            android:background="@null"
            android:hint="@string/string_input_id_card_code"
            android:textSize="@dimen/text_16sp"/>
    </RelativeLayout>
        <View
            style="@style/hor_view_15dp"/>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_upload_idcard_front"
            android:textSize="@dimen/text_16sp"
            android:layout_margin="@dimen/size_20dp"
            />

        <ImageView
            android:id="@+id/iv_idcard_front"
            android:layout_width="@dimen/size_240dp"
            android:layout_height="@dimen/size_150dp"
            android:src="@mipmap/icon_idcard_front"
            android:scaleType="fitXY"
            android:layout_marginLeft="@dimen/size_60dp"
            />
        </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_upload_idcard_back"
            android:textSize="@dimen/text_16sp"
            android:layout_margin="@dimen/size_20dp"
            />

        <ImageView
            android:id="@+id/iv_idcard_back"
            android:layout_width="@dimen/size_240dp"
            android:layout_height="@dimen/size_150dp"
            android:src="@mipmap/icon_idcard_back"
            android:scaleType="fitXY"
            android:layout_marginLeft="@dimen/size_60dp"
            />
        </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_upload_idcard_inhand"
            android:textSize="@dimen/text_16sp"
            android:layout_margin="@dimen/size_20dp"
            />

        <ImageView
            android:id="@+id/iv_idcard_handon"
            android:layout_width="@dimen/size_240dp"
            android:layout_height="@dimen/size_150dp"
            android:src="@mipmap/icon_handon_idcard"
            android:scaleType="fitXY"
            android:layout_marginLeft="@dimen/size_60dp"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_20sp"></LinearLayout>
    </LinearLayout>
</ScrollView>